--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,10 +5,14 @@
     <meta name="theme-color" content="#8C383A" />
     <link rel="icon" href="icons/favicon-196x196.png" type="image/png" />
     <link rel="alternate icon" href="/favicon.ico" type="ico" sizes="16x16" />
-    <link rel="apple-touch-icon" href="icons/apple-touch-icon-152x152.png" sizes="180x180" />
+    <link
+      rel="apple-touch-icon"
+      href="icons/apple-touch-icon-152x152.png"
+      sizes="180x180"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Vite Typescript React PWA</title>
+    <title>동감 (Ditto)</title>
   </head>
   <body>
     <div id="root"></div>
