--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="theme-color" content="#8C383A" />
-    <link rel="icon" href="icons/favicon-196x196.png" type="image/png" />
-    <link rel="alternate icon" href="/favicon.ico" type="ico" sizes="16x16" />
-    <link
-      rel="apple-touch-icon"
-      href="icons/apple-touch-icon-152x152.png"
-      sizes="180x180"
-    />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="/manifest.json" />
     <title>동감 (Ditto)</title>
