--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
           .then((registration) => {
             console.log("Service worker registration succeeded:", registration);
           })
-          .catch((err) => {
+          .catch((error) => {
             console.log("Service worker registration failed:", error);
           });
       } else {
