👷 Chore : 구글 search console 등록

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <!-- <link rel="manifest" href="/site.webmanifest"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="ZBtq2a_QHSDqiNAPbNFpmzNYOvmfAjSQV5WvUb_k1YE" />
     <link rel="manifest" href="/manifest.json" />
     <title>동감 (Ditto)</title>
   </head>
