✨ Feat : 구글 애널리틱스 태그 추가
Change-Id: I74accb3942773c1b14b9cf382e002bbb70efd6a3

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,15 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GHBCF2FTMT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-GHBCF2FTMT');
+    </script>
     <!-- <script>
       if (typeof navigator.serviceWorker !== 'undefined') {
         navigator.serviceWorker.register('sw.js')
