✨ Feat: 지도 클러스터링 구현

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
     <!-- 카카오 MAP API -->
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=642b656cfc4246856c593847189e45af"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=642b656cfc4246856c593847189e45af&libraries=clusterer"
     ></script>
   </body>
 </html>
